applications/atlassian/bamboo/bamboo-server-service-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: bamboo-server-lb
  namespace: atlassian-bamboo
  labels:
    app: atlassian-bamboo
spec:
  selector:
    app: atlassian-bamboo
  type: LoadBalancer  
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8085
