applications/atlassian/bamboo/bamboo-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bamboo-server
  namespace: atlassian-bamboo
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  #  certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
  #  nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  #tls:
  # - hosts:
  #     - prometheus.domain.com
  #   secretName: domain-com
  rules:
   - host: bamboo-server.domain.com
     http:
       paths:
        - path: /
          backend:
           serviceName: bamboo-server
           servicePort: 80
